--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ protobuf = "3.7.1"
 sha2 = "0.10.8"
 tokio = "1.41.0"
 xz = { version = "0.1.0", features = ["tokio"] }
+
+[build-dependencies]
+protobuf-codegen = "3.7.1"
+protoc-bin-vendored = "3.1.0"
