--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 [dependencies]
 bzip2 = { version = "0.4.4", features = ["tokio", "tokio-io"] }
 hex = "0.4.3"
+indicatif = "0.17.8"
 protobuf = "3.7.1"
 sha2 = "0.10.8"
-tokio = "1.41.0"
+tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
 xz = { version = "0.1.0", features = ["tokio"] }
 
 [build-dependencies]
