--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ bzip2 = { version = "0.4.4", features = ["tokio", "tokio-io"] }
 hex = "0.4.3"
 indicatif = "0.17.8"
 protobuf = "3.7.1"
+rayon = "1.10.0"
 sha2 = "0.10.8"
-tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
 xz = { version = "0.1.0", features = ["tokio"] }
 
 [build-dependencies]
