--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ protobuf = "3.7.1"
 rayon = "1.10.0"
 sha2 = "0.10.8"
 xz = { version = "0.1.0", features = ["tokio"] }
+zstd = "0.13.2"
 
 [build-dependencies]
 protobuf-codegen = "3.7.1"
