--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ xz = { version = "0.1.0", features = ["tokio"] }
 [build-dependencies]
 protobuf-codegen = "3.7.1"
 protoc-bin-vendored = "3.1.0"
+
+[profile.release]
+lto = true
