--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,18 +4,20 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bzip2 = { version = "0.4.4", features = ["tokio", "tokio-io"] }
+bzip2 = { version = "0.5.2", default-features = false, features = [
+    "libbz2-rs-sys",
+] }
 clap = { version = "4.5.20", features = ["derive"] }
 hex = "0.4.3"
-indicatif = "0.17.8"
-protobuf = "3.7.1"
+indicatif = "0.17.11"
+protobuf = "3.7.2"
 rayon = "1.10.0"
 sha2 = "0.10.8"
 xz = { version = "0.1.0", features = ["tokio"] }
-zstd = "0.13.2"
+zstd = "0.13.3"
 
 [build-dependencies]
-protobuf-codegen = "3.7.1"
+protobuf-codegen = "3.7.2"
 protoc-bin-vendored = "3.1.0"
 
 [profile.release]
